fix: properties table width on tablet
Give the `properties` table a base width of 100%

fix #589

--- a/sass/atoms/_tables.scss
+++ b/sass/atoms/_tables.scss
@@ -42,6 +42,7 @@ table,
   @include readable-line-length();
   border: $standard-primary-border;
   border-left: $property-table-border;
+  width: 100%;
 
   th,
   td {
